# closestpair-ui

./: .gitignore  README.md  coordinate-generator.py  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: ButtonsPanel.svelte  Graph.svelte
